--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "-- PRE-COMMIT HOOKS --": "",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable"
+    "postpublish": "pinst --enable",
+    "prepare": "husky"
   },
   "packageManager": "yarn@4.1.1",
   "devDependencies": {
