--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^9.0.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
+    "pinst": "^3.0.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.6.0",
