fix: ignore test files from distribution

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     ".": "./dist/index.js"
   },
   "files": [
-    "dist"
+    "dist",
+    "!/**/__test__",
+    "!*.test.*"
   ],
   "sideEffects": false,
   "engines": {
