--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "eslint .",
     "test": "vitest run",
     "smoke": "yarn build && yarn lint && yarn test",
+    "docs": "typedoc && prettier --ignore-unknown --write docs/",
     "-- PRE-COMMIT HOOKS --": "",
     "postinstall": "husky install",
     "prepublishOnly": "pinst --disable",
@@ -35,6 +36,8 @@
     "lint-staged": "^15.2.2",
     "pinst": "^3.0.0",
     "prettier": "^3.2.5",
+    "typedoc": "^0.25.13",
+    "typedoc-plugin-markdown": "^4.0.0-next.60",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.6.0",
     "vitest": "^1.5.0"
