--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -17,6 +17,7 @@ jobs:
     if: github.actor == 'dependabot[bot]'
 
     permissions:
+      contents: write
       pull-requests: write
 
     steps:
