fix: do not remove comments on TSC build so that documentation in VSCode works

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
 
     /* Emit */
     "outDir": "dist" /* Specify an output folder for all emitted files. */,
-    "removeComments": true /* Disable emitting comments. */,
+    "removeComments": false /* Keep comments. Otherwise intellisense does not work. */,
 
     "preserveConstEnums": true /* Disable erasing 'const enum' declarations in generated code. */,
 
