--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "smoke": "yarn build && yarn lint && yarn test",
     "docs": "typedoc && prettier --ignore-unknown --write docs/",
     "-- PRE-COMMIT HOOKS --": "",
-    "postinstall": "husky || true",
+    "localAfterInstall": "husky || true",
     "prepublishOnly": "pinst --disable",
-    "postpublish": "pinst --enable",
-    "prepare": "husky"
+    "postpublish": "pinst --enable"
   },
   "packageManager": "yarn@4.2.2",
   "devDependencies": {
