--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,6 +1,5 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-
-  "extends": ["./tsconfig.json"],
+  "extends": ["@tsconfig/strictest/tsconfig.json"],
   "include": ["eslint.config.mjs"]
 }
